--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "ws": "^8.18.3"
